<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingBottom="20dp"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wedding_cake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/OnlineBakeryText"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:paddingRight="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_user"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"/>

                    <EditText
                        android:background="#0000"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/user_name_login"/>
                </LinearLayout>

                <LinearLayout
                    android:paddingRight="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="12dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_password"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/password_login"
                        android:background="#0000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/chkWindows"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="30dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/text_view_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_pass"
                        android:textColor="@color/colorRed"
                        android:layout_marginRight="30dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@color/btnRegister"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:text="@string/create_account_intro"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_view_create_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:text="@string/create_account_underlined"
                android:textColor="@color/colorRed"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>