<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_wedding_cake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/OnlineBakeryText"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textVie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro"
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_name"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/userValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textViewx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Phone Number*"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/phoneValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/emailValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtFirst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/firstValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtLast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/lastValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pw_intro"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtPassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text=""
                        android:layout_marginRight="50dp"/>

                    <TextView
                        android:id="@+id/pwValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/IntroText" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pw_confirm"
                        android:textAppearance="@style/RegisterText" />

                    <EditText
                        android:id="@+id/txtPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text=""
                        android:layout_marginRight="50dp"/>


                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="40dp">

                        <Button
                            android:id="@+id/btnRegisterCustomer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/btnRegister"
                            android:text="@string/register_customer"
                            android:textColor="@color/colorWhite"
                            android:textSize="22sp"
                            android:layout_marginBottom="14dp"
                            android:layout_marginRight="50dp"/>

                        <Button
                            android:id="@+id/btnRegisterBaker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/btnRegister"
                            android:text="@string/register_baker"
                            android:textColor="@color/colorWhite"
                            android:textSize="22sp"
                            android:layout_marginBottom="14dp"
                            android:layout_marginRight="50dp"/>
                    </LinearLayout>

                </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>